2005-09-30 Vincent Jardin <vincent.jardin@6wind.com>

	* isis_route.c: fix EXTREME_DEBUG compilation

2005-09-28 Hasso Tepper <hasso at quagga.net>

	* *.c: Massive cleanup of lists loops. Stop abusing ALL_LIST_ELEMENTS.
	  Replace XMALLOC + memset with XCALLOC. Fix some indentation issues.
	  The only really significant change is simplified isis_delete_adj
	  function in isis_adjacency.c.

2005-09-28 Hasso Tepper <hasso at quagga.net>

	* isis_dynh.c, isisd.h: Implement dynamic hostname cache cleanup.
	* isis_lsp.c: Refresh dynamic hostname in the cache while refreshing
	  topology LSP.

2005-09-28 Hasso Tepper <hasso at quagga.net>

	* isis_lsp.c: Make topology generator generate TE TLVs if necessary.
	  Also take care of inserting dynamic hostname of topology TLVs into
	  cache.

2005-09-26 Hasso Tepper <hasso at quagga.net>

	* isis_spf.c: Changing cost from uint16_t to uint32_t. Unset
	  ISIS_ROUTE_FLAG_ACTIVE flag before running SPF.
	* isisd.[ch]: Separate route tables for different levels. SPF is done
	  separately, but in case of L1L2 area they have to be merged.
	* isis_zebra.c: Set/unset ISIS_ROUTE_FLAG_ZEBRA_SYNC flag correctly in
	  case of adding/removing IPv4 routes.
	* zebra_route.c: Rework route validating process. Merging L1 and L2
	  tables in case of L1L2 area.

2005-09-26 Hasso Tepper <hasso at quagga.net>

	* isis_spf.[ch]: Added TE TLVs to the SPF process. It seems to work
	  mostly, but needs certainly much more testing, especially transition
	  situation.

2005-09-26 Hasso Tepper <hasso at quagga.net>

	* isis_lsp.c: Put correct metric info into TE TLV's. Wide metric is
	  used only if only wide metric style (extended TLV's) is in use.

2005-09-26 Hasso Tepper <hasso at quagga.net>

	* isis_tlv.[ch]: New function tlv_add_in_addr() to put just one IPv4
	  address into TLV. Used for IPv4 address TLV (in case of LSP) and TE
	  router ID TLV.
	* isis_lsp.c: Use tlv_add_in_addr() and include router ID in LSP.
